# eventflow-backend

./: .coverage  .env.example  .gitignore  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
apps/analytics/: tasks.py  urls.py  views.py
apps/events/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py
apps/notifications/: broadcast.py  consumers.py  middleware.py  routing.py
apps/organizations/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py  viewsets.py
apps/organizations/migrations/: 0001_initial.py
apps/payments/: models.py  tasks.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py
config/: asgi.py  celery.py  urls.py  urls_public.py
config/settings/: base.py  dev.py  prod.py
docker/: Dockerfile  entrypoint.sh
